--- a/Views/Planet/Detail.cshtml
+++ b/Views/Planet/Detail.cshtml
@@ -7,6 +7,6 @@
         <div class="card-text">
             @Model.Content
         </div>
-        <a class="card-link" asp-action="Index">Các hành tin</a>
+        <a class="card-link" asp-action="Index">Các hành tinh</a>
     </div>
 </div>
