--- a/Views/Shared/_AlertMessage.cshtml
+++ b/Views/Shared/_AlertMessage.cshtml
@@ -10,5 +10,8 @@
   <div>
     @message
   </div>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
 }
