--- a/Views/Shared/_MenuManagePartial.cshtml
+++ b/Views/Shared/_MenuManagePartial.cshtml
@@ -10,5 +10,6 @@
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
     <li><a class="dropdown-item" asp-action="Index" asp-controller="DbManage" asp-area="Database">Database</a></li>
+    <li><a class="dropdown-item" asp-action="Index" asp-controller="Contact" asp-area="Contact">Quản lý liên hệ</a></li>
   </ul>
 </div>
