--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,8 +7,11 @@ html {
     font-size: 16px;
   }
 }
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
@@ -19,4 +22,48 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.app-navbar {
+  background: rgba(0, 0, 0, 0.8);
+}
+.app-navbar .text-dark {
+  color: #b9c3ce !important;
+}
+.app-navbar .text-dark:hover {
+  color: white !important;
+}
+.app-navbar .navbar-brand {
+  color: #a57de5;
+}
+.app-navbar .navbar-brand:hover {
+  color: #ea008c;
+}
+.app-navbar .dropdown-toggle {
+  border-color: #a562ad;
+  color: #ae84b3;
+}
+
+.contact-firstcol {
+  background-color: #9854a0;
+  color: white;
+  text-align: center;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.contact-firstcol h4 {
+  line-height: 40px;
+  font-weight: 400;
+  margin-top: 20px;
+}
+.contact-firstcol img {
+  max-width: 100px;
+}
+
+.formcontact label {
+  font-weight: 700;
+}
+.formcontact .btn-primary {
+  background: #9854a0;
+  border-color: #9854a0;
 }
